--- a/scss/main.css
+++ b/scss/main.css
@@ -1,1 +1,130 @@
-/*# sourceMappingURL=main.css.map */
+html, body {
+  margin: 0;
+}
+
+header {
+  margin-top: 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
+header nav {
+  width: 85%;
+  height: 80px;
+  border-radius: 100px;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+}
+header nav .nav-logo {
+  margin-left: 50px;
+  width: auto;
+  height: 90%;
+}
+header nav .nav-logo a {
+  display: block;
+  height: 100%;
+}
+header nav .nav-logo a img {
+  height: 100%;
+  width: auto;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+header nav .nav-links {
+  list-style: none;
+  display: flex;
+  gap: 30px;
+}
+header nav .nav-links li a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  font-size: 16px;
+}
+header nav .nav-links li a:hover {
+  text-decoration: underline;
+  color: gray;
+}
+header nav .nav-buttons {
+  margin-right: 50px;
+  display: flex;
+  gap: 5px;
+}
+header nav .nav-buttons button {
+  background-color: burlywood;
+  color: black;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 50px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+header nav .nav-buttons button:hover {
+  background-color: black;
+  color: white;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+  width: 100%;
+  height: 1000vh;
+  background-color: wheat;
+}
+main .landing-section {
+  width: 95%;
+  height: 95vh;
+  border-radius: 20px;
+  margin-top: 60px;
+  background: url("bg-imgs/landing-bg.png");
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
+main .landing-section .landing-content {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+main .landing-section .landing-content .landing-title {
+  font-size: 100px;
+  flex: 2;
+  color: white;
+}
+main .landing-section .landing-content .landing-text {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+  align-items: end;
+}
+main .landing-section .landing-content .landing-text p {
+  color: white;
+  font-size: 20px;
+  text-align: right;
+}
+main .landing-section .landing-content .landing-text button {
+  background-color: wheat;
+  text-align: center;
+  border: none;
+  border-radius: 20px;
+  padding: 10px 20px;
+}
+main .test {
+  height: 100vh;
+  width: 100%;
+  background-color: red;
+}/*# sourceMappingURL=main.css.map */
