--- a/scss/main.css
+++ b/scss/main.css
@@ -77,10 +77,10 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 50px;
+  gap: 30px;
   width: 100%;
   height: 1000vh;
-  background-color: wheat;
+  background-color: white;
 }
 main .landing-section {
   width: 95%;
@@ -123,8 +123,40 @@ main .landing-section .landing-content .landing-text button {
   border-radius: 20px;
   padding: 10px 20px;
 }
-main .test {
-  height: 100vh;
+main .featured-category-section {
+  min-height: 250px;
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+main .featured-category-section p {
+  margin: 0;
+  font-size: 22px;
+  font-weight: 500;
+}
+main .featured-category-section .cards {
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+main .featured-category-section .cards .card {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+main .featured-category-section .cards .card img {
+  width: 100%;
+  height: auto;
+}
+main .trending-section {
+  width: 100%;
+  height: 400px;
   background-color: red;
 }/*# sourceMappingURL=main.css.map */
