--- a/scss/main.scss
+++ b/scss/main.scss
@@ -209,10 +209,64 @@ main {
         }
     }
 
+    // TOP TREDNING SECTION
     .trending-section {
-        width: 100%;
-        height: 400px;
+        width: 95%;
 
+        min-height: 300px;
         background-color: red;
+
+        overflow: hidden;
+
+        .section-title {
+            font-size: 22px;
+            font-weight: 500;
+        }
+
+        .categories__container {
+
+            .swiper-wrapper {
+
+                .category__item {
+                    text-align: center;
+                    border: solid 2px black;
+                    padding: 0.625rem 0.625rem 1.25rem;
+                }
+            }
+        }
+
+        //swiper buttons
+        .swiper {
+            overflow: initial;
+
+            .swiper-button-next::after, .swiper-button-prev::after {
+                content: '';
+            }
+            .swiper-button-next, .swiper-button-prev {
+                top: -1.875rem;
+
+                background-color: wheat;
+                border: 1px solid black;
+                width: 30px;
+                height: 30px;
+                border-radius: 50%;
+                
+
+                svg {
+                    width: 100%;
+                    height: 100%;
+                    
+                    stroke: black; //arrow color
+                }
+            }
+
+            .swiper-button-prev {
+                left: initial;
+                right: 2.5rem;
+            }
+            .swiper-button-next {
+                right: 0;
+            }
+        }
     }
 }
