--- a/scss/main.scss
+++ b/scss/main.scss
@@ -212,25 +212,62 @@ main {
     // TOP TREDNING SECTION
     .trending-section {
         width: 95%;
-
-        min-height: 300px;
-        background-color: red;
-
+        background-color: #fff;
+        padding-block: 2rem;
         overflow: hidden;
 
-        .section-title {
+        .trending-title {
             font-size: 22px;
-            font-weight: 500;
+            font-weight: 600;
+            margin-top: 0;
+
+            span {
+                color: #e91e63;
+            }
         }
 
-        .categories__container {
+        .trending-container {
+            height: auto;
+            .cards {
+                display: flex;
+                gap: 1rem;
 
-            .swiper-wrapper {
+                .card {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
 
-                .category__item {
-                    text-align: center;
-                    border: solid 2px black;
-                    padding: 0.625rem 0.625rem 1.25rem;
+                    gap: 10px;
+                    width: 180px;
+                    padding: 1rem;
+                    border: 1px solid #ddd;
+                    border-radius: 8px;
+                    text-align: left;
+                    text-decoration: none;
+                    transition: 0.3s ease;
+
+                    img {
+                        margin: 0;
+
+                        width: 100%;
+                        height: auto;
+                        border-radius: 4px;
+                        object-fit: contain;
+                    }
+
+                    .category__title {
+                        margin: 0;
+                        font-size: 14px;
+                        font-weight: 500;
+                        color: #333;
+                    }
+              
+                    .price {
+                        margin: 0;
+                        font-size: 15px;
+                        font-weight: 600;
+                        color: #000;
+                    }
                 }
             }
         }
