--- a/scss/main.scss
+++ b/scss/main.scss
@@ -237,10 +237,12 @@ main {
                     flex-direction: column;
                     align-items: flex-start;
 
-                    gap: 10px;
+                    gap: 10px; //space between the texts
+
                     width: 180px;
                     padding: 1rem;
-                    border: 1px solid #ddd;
+
+                    // border: 1px solid #ddd;
                     border-radius: 8px;
                     text-align: left;
                     text-decoration: none;
@@ -261,7 +263,7 @@ main {
                         font-weight: 500;
                         color: #333;
                     }
-              
+
                     .price {
                         margin: 0;
                         font-size: 15px;
@@ -283,7 +285,7 @@ main {
                 top: -1.875rem;
 
                 background-color: wheat;
-                border: 1px solid black;
+                border: 1px solid whitesmoke;
                 width: 30px;
                 height: 30px;
                 border-radius: 50%;
