--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,3 +16,14 @@ $button-primary-color-hover: #EEDEC5;
 // FONTS
 // poppins
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+$font-main: "Poppins", cursive;
+
+//Font Size Variables
+$font-xs: 0.75rem;    // Extra Small (12px)
+$font-sm: 0.875rem;   // Small (14px)
+$font-base: 1rem;     // Base size (16px)
+$font-md: 1.125rem;   // Medium (18px)
+$font-lg: 1.5rem;     // Large (24px)
+$font-xl: 2rem;       // Extra Large (32px)
+$font-xxl: 3rem;      // Super Big (48px for drama~)
