updated the banner html

--- a/scss/main.css
+++ b/scss/main.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 header {
-  margin-top: 20;
+  margin-top: 20px;
   position: fixed;
   top: 0;
   left: 0;
@@ -237,9 +237,41 @@ main .trending-section .swiper .swiper-button-next {
   right: 0;
 }
 main .banner {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 0;
+  height: 400px;
   width: 95%;
-  height: 300px;
-  background-color: wheat;
+}
+main .banner .box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: white;
+  text-transform: uppercase;
+}
+main .banner .box-1 {
+  grid-row: 1/span 2;
+  grid-column: 1/2;
+  background-color: #555;
+}
+main .banner .pic-2 {
+  grid-row: 1/2;
+  grid-column: 2/3;
+  background-color: #777;
+}
+main .banner .pic-3 {
+  grid-row: 1/2;
+  grid-column: 3/4;
+  background-color: #999;
+}
+main .banner .pic-4 {
+  grid-row: 2/3;
+  grid-column: 2/span 2;
+  background-color: #bbb;
 }
 main .spring-selction-section {
   height: 300vh;
