--- a/scss/main.css
+++ b/scss/main.css
@@ -253,7 +253,7 @@ main .banner .box {
   color: white;
   text-transform: uppercase;
 }
-main .banner .box-1 {
+main .banner .pic-1 {
   grid-row: 1/span 2;
   grid-column: 1/2;
   background-color: #555;
@@ -272,6 +272,14 @@ main .banner .pic-4 {
   grid-row: 2/3;
   grid-column: 2/span 2;
   background-color: #bbb;
+}
+main .banner .pic-4 .inner-box {
+  flex: 1;
+  background-color: #ddd;
+  color: #000;
+  text-align: center;
+  width: 100%;
+  height: 100%;
 }
 main .spring-selction-section {
   height: 300vh;
