--- a/scss/main.scss
+++ b/scss/main.scss
@@ -328,7 +328,7 @@ main {
           text-transform: uppercase;
         }
       
-        .box-1 {
+        .pic-1 {
           grid-row: 1 / span 2;
           grid-column: 1 / 2;
           background-color: #555;
@@ -350,6 +350,15 @@ main {
           grid-row: 2 / 3;
           grid-column: 2 / span 2;
           background-color: #bbb;
+
+          .inner-box {
+            flex: 1;
+            background-color: #ddd;
+            color: #000;
+            text-align: center;
+            width: 100%;
+            height: 100%;
+          }
         }
 
     }
