--- a/scss/main.scss
+++ b/scss/main.scss
@@ -310,57 +310,70 @@ main {
     }
 
     //BANNER SECTION
-    .banner {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        gap: 0;
+    .banner-section {
         height: 400px; 
         width: 95%;
-      
-        .box {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          font-size: 1.5rem;
-          font-weight: bold;
-          color: white;
-          text-transform: uppercase;
-        }
-      
-        .pic-1 {
-          grid-row: 1 / span 2;
-          grid-column: 1 / 2;
-          background-color: #555;
-        }
-      
-        .pic-2 {
-          grid-row: 1 / 2;
-          grid-column: 2 / 3;
-          background-color: #777;
-        }
-      
-        .pic-3 {
-          grid-row: 1 / 2;
-          grid-column: 3 / 4;
-          background-color: #999;
-        }
-      
-        .pic-4 {
-          grid-row: 2 / 3;
-          grid-column: 2 / span 2;
-          background-color: #bbb;
 
-          .inner-box {
-            flex: 1;
-            background-color: #ddd;
-            color: #000;
-            text-align: center;
+        .banner-title {
+            margin-bottom: 10px;
+            font-size: 22px;
+            font-weight: 500;
+        }
+
+        .banner {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            gap: 0;
+
             width: 100%;
             height: 100%;
-          }
-        }
 
+          
+            .box {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              font-size: 1.5rem;
+              font-weight: bold;
+              color: white;
+              text-transform: uppercase;
+            }
+          
+            .pic-1 {
+              grid-row: 1 / span 2;
+              grid-column: 1 / 2;
+              background-color: #555;
+            }
+          
+            .pic-2 {
+              grid-row: 1 / 2;
+              grid-column: 2 / 3;
+              background-color: #777;
+            }
+          
+            .pic-3 {
+              grid-row: 1 / 2;
+              grid-column: 3 / 4;
+              background-color: #999;
+            }
+          
+            .pic-4 {
+              grid-row: 2 / 3;
+              grid-column: 2 / span 2;
+              background-color: #bbb;
+    
+              .inner-box {
+                flex: 1;
+                background-color: #ddd;
+                color: #000;
+                text-align: center;
+                width: 100%;
+                height: 100%;
+              }
+            }
+    
+        }
     }
 
     //SPRING SELECTION SECTION
