--- a/scss/main.css
+++ b/scss/main.css
@@ -4,6 +4,11 @@ html, body {
   font-family: "Poppins", cursive;
 }
 
+svg {
+  width: 15px;
+  height: auto;
+}
+
 header {
   margin-top: 20px;
   position: fixed;
@@ -81,7 +86,6 @@ main {
   align-items: center;
   gap: 30px;
   width: 100%;
-  height: 1000vh;
   background-color: white;
 }
 main .landing-section {
@@ -294,10 +298,30 @@ main .spring-selction-section {
   height: 300vh;
   width: 100%;
   margin-top: 100px;
-  background-color: wheat;
   background: url("bg-imgs/Spring selection elephants.png");
   background-position: left;
   background-size: cover;
+}
+main .product-section .tab__btns {
+  display: flex;
+  -moz-column-gap: 0.75rem;
+       column-gap: 0.75rem;
+}
+main .product-section .tab__btns .tab__btn {
+  background-color: whitesmoke;
+  color: black;
+  padding: 1rem 1.25rem 0.875rem;
+  border-radius: 0.25rem;
+  font-family: "Poppins", cursive;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+main .product-section .tab__btns .tab__btn.active-tab {
+  background-color: wheat;
+}
+main .product-section .tab__items .tab__item .products__container {
+  grid-template-columns: repeat(4, 1fr);
 }
 main .reviews-section {
   background: #fff;
@@ -379,4 +403,30 @@ main .reviews-section .review-cards .review-card .reviewer .reviewer-info .revie
   font-size: 0.85rem;
   color: #555;
   margin: 0;
+}
+main .reviews-section .review-promise {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 95%;
+  height: 400px;
+  gap: 2rem;
+}
+main .reviews-section .review-promise .img-container {
+  width: auto;
+  height: 100%;
+}
+main .reviews-section .review-promise .img-container img {
+  height: 100%;
+}
+main .reviews-section .review-promise .text-container {
+  padding: 1rem;
+}
+main .reviews-section .review-promise .text-container h3 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+main .reviews-section .review-promise .text-container p {
+  font-size: 1rem;
+  line-height: 1.5;
 }/*# sourceMappingURL=main.css.map */
