--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,10 @@ html, body {
     margin: 0;
     font-family: $font-main;
 }
-
+svg {
+  width: 15px;
+  height: auto;
+}
 
 
 
@@ -111,7 +114,6 @@ main {
     gap: 30px; //gap between sections
 
     width: 100%;
-    height: 1000vh;
 
     background-color: white; //will change color with gsap
 
@@ -383,11 +385,47 @@ main {
 
         margin-top: 100px;
 
-        background-color: wheat;
         background: url('bg-imgs/Spring\ selection\ elephants.png');
         background-position: left;
         background-size: cover;
     }
+
+    // PRODUCTS SECTION
+    
+    .product-section {
+      
+      .tab__btns {
+        display: flex;
+        column-gap: 0.75rem;
+  
+        .tab__btn {
+          background-color: whitesmoke;
+          color: black;
+          padding: 1rem 1.25rem 0.875rem;
+          border-radius: 0.25rem;
+          font-family: $font-main;
+          font-size: 1rem;
+          font-weight: 500;
+          cursor: pointer;
+        }
+  
+        // Active tab
+        .tab__btn.active-tab {
+          background-color: wheat;
+        }
+      }
+
+      .tab__items {
+
+        .tab__item {
+
+          .products__container {
+            grid-template-columns: repeat(4, 1fr);
+          }
+        }
+      }
+    }
+
 
     //REVIEWS SECTION
     .reviews-section {
@@ -482,6 +520,41 @@ main {
             }
           }
         }
+
+        .review-promise {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            width: 95%;
+            height: 400px;
+            gap: 2rem; // space between the image and text
+          
+            .img-container {
+              width: auto;
+              height: 100%;
+
+              img {
+                height: 100%;
+              }
+            }
+          
+            .text-container {
+              padding: 1rem;
+          
+              h3 {
+                font-size: 1.5rem;
+                margin-bottom: 1rem;
+              }
+          
+              p {
+                font-size: 1rem;
+                line-height: 1.5;
+              }
+            }
+        }
+          
+          
     }
       
 
