--- a/scss/main.css
+++ b/scss/main.css
@@ -1,12 +1,79 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-html, body {
+* {
   margin: 0;
-  font-family: "Poppins", cursive;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 svg {
   width: 15px;
   height: auto;
+}
+
+.container {
+  max-width: 1320px;
+  margin-inline: auto;
+  padding-inline: 0.75rem;
+}
+
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
+
+.section {
+  padding-block: 2rem;
+}
+
+.section--lg {
+  padding-block: 4rem;
+}
+
+.section__title {
+  font-size: var(--h4-font-size);
+  margin-bottom: 1.5rem;
+}
+
+.section__title span {
+  color: var(--first-color);
+}
+
+.form__input {
+  border: 1px solid var(--border-color-alt);
+  padding-inline: 1rem;
+  height: 45px;
+  border-radius: 0.25rem;
+  font-size: var(--small-font-size);
+}
+
+.new__price {
+  color: var(--first-color);
+  font-weight: var(--weight-600);
+}
+
+.old__price {
+  color: var(--text-color-light);
+  font-size: var(--small-font-size);
+  text-decoration: line-through;
+}
+
+.form {
+  row-gap: 1rem;
+}
+
+.form__group {
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
+
+.textarea {
+  height: 200px;
+  padding-block: 1rem;
+  resize: none;
+}
+
+img {
+  max-width: 100%;
 }
 
 header {
@@ -87,6 +154,8 @@ main {
   gap: 30px;
   width: 100%;
   background-color: white;
+  /* Active Tab */
+  /* Product Hover */
 }
 main .landing-section {
   width: 95%;
@@ -302,26 +371,178 @@ main .spring-selction-section {
   background-position: left;
   background-size: cover;
 }
-main .product-section .tab__btns {
+main .tab__btns {
   display: flex;
-  -moz-column-gap: 0.75rem;
-       column-gap: 0.75rem;
+  flex-wrap: wrap;
+  gap: 0.75rem;
+  margin-bottom: 2rem;
 }
-main .product-section .tab__btns .tab__btn {
-  background-color: whitesmoke;
-  color: black;
+main .tab__btn {
+  background-color: var(--container-color);
+  color: var(--title-color);
   padding: 1rem 1.25rem 0.875rem;
   border-radius: 0.25rem;
-  font-family: "Poppins", cursive;
-  font-size: 1rem;
-  font-weight: 500;
+  font-family: var(--second-font);
+  font-size: var(--small-font-size);
+  font-weight: var(--weight-600);
   cursor: pointer;
 }
-main .product-section .tab__btns .tab__btn.active-tab {
-  background-color: wheat;
-}
-main .product-section .tab__items .tab__item .products__container {
+main .products__container {
   grid-template-columns: repeat(4, 1fr);
+}
+main .product__item {
+  border: 1px solid var(--border-color);
+  border-radius: 1.5rem;
+  transition: all 0.2s var(--transition);
+}
+main .product__banner {
+  padding: 0.625rem 0.75rem 0.75rem;
+}
+main .product__banner,
+main .product__images {
+  position: relative;
+}
+main .product__images {
+  display: block;
+  overflow: hidden;
+  border-radius: 1.25rem;
+}
+main .product__img {
+  vertical-align: middle;
+  transition: all 1.5s var(--transition);
+}
+main .product__item:hover .product__img {
+  transform: scale(1.1);
+}
+main .product__img.hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+main .product__actions {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+  transition: all 0.2s var(--transition);
+}
+main .action__btn {
+  width: 40px;
+  height: 40px;
+  line-height: 42px;
+  text-align: center;
+  border-radius: 50%;
+  background-color: var(--first-color-alt);
+  border: 1px solid var(--border-color);
+  color: var(--text-color);
+  font-size: var(--small-font-size);
+  position: relative;
+}
+main .action__btn::before,
+main .action__btn::after {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: all 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+}
+main .action__btn::before {
+  content: "";
+  top: -2px;
+  border: 0.5rem solid transparent;
+  border-top-color: var(--first-color);
+}
+main .action__btn::after {
+  content: attr(aria-label);
+  bottom: 100%;
+  background-color: var(--first-color);
+  color: var(--body-color);
+  font-size: var(--tiny-font-size);
+  white-space: nowrap;
+  padding-inline: 0.625rem;
+  border-radius: 0.25rem;
+  line-height: 2.58;
+}
+main .product__badge {
+  position: absolute;
+  left: 1.25rem;
+  top: 1.25rem;
+  background-color: var(--first-color);
+  color: var(--body-color);
+  padding: 0.25rem 0.625rem;
+  border-radius: 2.5rem;
+  font-size: var(--tiny-font-size);
+}
+main .product__badge.light-pink {
+  background-color: hsl(341, 100%, 73%);
+}
+main .product__badge.light-green {
+  background-color: hsl(155, 20%, 67%);
+}
+main .product__badge.light-orange {
+  background-color: hsl(24, 100%, 73%);
+}
+main .product__badge.light-blue {
+  background-color: hsl(202, 53%, 76%);
+}
+main .product__content {
+  padding: 0 1.25rem 1.125rem;
+  position: relative;
+}
+main .product__category {
+  color: var(--text-color-light);
+  font-size: var(--smaller-font-size);
+}
+main .product__title {
+  font-size: var(--normal-font-size);
+  margin-block: 0.75rem 0.5rem;
+}
+main .product__rating {
+  color: hsl(42, 100%, 50%);
+  font-size: var(--smaller-font-size);
+  margin-bottom: 0.75rem;
+}
+main .product__price .new__price {
+  font-size: var(--large-font-size);
+}
+main .cart__btn {
+  position: absolute;
+  bottom: 1.6rem;
+  right: 1.25rem;
+}
+main .tab__btn.active-tab {
+  color: var(--first-color);
+  background-color: var(--second-color);
+}
+main .tab__item:not(.active-tab) {
+  display: none;
+}
+main .product__img.hover,
+main .product__actions,
+main .action__btn::before,
+main .action__btn::after,
+main .product__item:hover .product__img.default {
+  opacity: 0;
+}
+main .product__item:hover {
+  box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
+}
+main .product__item:hover .product__img.hover,
+main .product__item:hover .product__actions,
+main .action__btn:hover::before,
+main .action__btn:hover::after {
+  opacity: 1;
+}
+main .action__btn:hover::before,
+main .action__btn:hover::after {
+  transform: translateX(-50%) translateY(-0.5rem);
+}
+main .action__btn:hover {
+  background-color: var(--first-color);
+  border-color: var(--first-color);
+  color: var(--body-color);
 }
 main .reviews-section {
   background: #fff;
