--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,56 +1,14 @@
 // imports
 @import "variables";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-/*=============== GOOGLE FONTS ===============*/
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Spartan:wght@400;500;600;700&display=swap');
-
-/*=============== VARIABLES CSS ===============*/
-:root {
-  --header-height: 4rem;
-
-  /*========== Colors ==========*/
-  /* Color mode HSL(hue, saturation, lightness) */
-  --first-color: hsl(176, 88%, 27%);
-  --first-color-alt: hsl(129, 44%, 94%);
-  --second-color: hsl(34, 94%, 87%);
-  --title-color: hsl(0, 0%, 13%);
-  --text-color: hsl(154, 13%, 32%);
-  --text-color-light: hsl(60, 1%, 56%);
-  --body-color: hsl(0, 0%, 100%);
-  --container-color: hsl(0, 0%, 93%);
-  --border-color: hsl(129, 36%, 85%);
-  --border-color-alt: hsl(113, 15%, 90%);
-
-  /*========== Font and typography ==========*/
-  /* .5rem = 8px | 1rem = 16px ... */
-  --body-font: 'Lato', sans-serif;
-  --second-font: 'Spartan', sans-serif;
-  --big-font-size: 3.5rem;
-  --h1-font-size: 2.75rem;
-  --h2-font-size: 2rem;
-  --h3-font-size: 1.75rem;
-  --h4-font-size: 1.375rem;
-  --large-font-size: 1.125rem;
-  --normal-font-size: 1rem;
-  --small-font-size: 0.875rem;
-  --smaller-font-size: 0.75rem;
-  --tiny-font-size: 0.6875rem;
-
-  /*========== Font weight ==========*/
-  --weight-400: 400;
-  --weight-500: 500;
-  --weight-600: 600;
-  --weight-700: 700;
-
-  /*========== Transition ==========*/
-  --transition: cubic-bezier(0, 0, 0.05, 1);
-}
 
 // resets
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: $font-main;
 }
 
 svg {
@@ -73,26 +31,26 @@ svg {
   padding-block: 4rem;
 }
 .section__title {
-  font-size: var(--h4-font-size);
+  font-size: $h4-font-size;
   margin-bottom: 1.5rem;
 }
 .section__title span {
-  color: var(--first-color);
+  color: $first-color;
 }
 .form__input {
-  border: 1px solid var(--border-color-alt);
+  border: 1px solid $border-color-alt;
   padding-inline: 1rem;
   height: 45px;
   border-radius: 0.25rem;
-  font-size: var(--small-font-size);
+  font-size: $small-font-size;
 }
 .new__price {
-  color: var(--first-color);
-  font-weight: var(--weight-600);
+  color: $first-color;
+  font-weight: $weight-600;
 }
 .old__price {
-  color: var(--text-color-light);
-  font-size: var(--small-font-size);
+  color: $text-color-light;
+  font-size: $small-font-size;
   text-decoration: line-through;
 }
 .form {
@@ -249,6 +207,7 @@ main {
                 flex: 1;
                 justify-content: center;
                 align-items: end;
+                gap: 15px;
                 p {
                     color: white;
                     font-size: 20px;
@@ -382,13 +341,14 @@ main {
                 content: '';
             }
             .swiper-button-next, .swiper-button-prev {
-                top: -1.875rem;
+                top: -0.7rem;
 
                 background-color: wheat;
                 border: 1px solid whitesmoke;
                 width: 30px;
                 height: 30px;
                 border-radius: 50%;
+                font-size: --tiny-font-size;
                 
 
                 svg {
@@ -497,13 +457,13 @@ main {
     }
     
     .tab__btn {
-      background-color: var(--container-color);
-      color: var(--title-color);
+      background-color: $container-color;
+      color: $title-color;
       padding: 1rem 1.25rem 0.875rem;
       border-radius: 0.25rem;
-      font-family: var(--second-font);
-      font-size: var(--small-font-size);
-      font-weight: var(--weight-600);
+      font-family: $font-main;
+      font-size: $small-font-size;
+      font-weight: $weight-600;
       cursor: pointer;
     }
     
@@ -512,9 +472,9 @@ main {
     }
     
     .product__item {
-      border: 1px solid var(--border-color);
+      border: 1px solid $border-color;
       border-radius: 1.5rem;
-      transition: all 0.2s var(--transition);
+      transition: all 0.2s $transition;
     }
     
     .product__banner {
@@ -534,7 +494,7 @@ main {
     
     .product__img {
       vertical-align: middle;
-      transition: all 1.5s var(--transition);
+      transition: all 1.5s $transition;
     }
     
     .product__item:hover .product__img {
@@ -554,7 +514,7 @@ main {
       transform: translate(-50%, -50%);
       display: flex;
       column-gap: 0.5rem;
-      transition: all 0.2s var(--transition);
+      transition: all 0.2s $transition;
     }
     
     .action__btn {
@@ -563,10 +523,10 @@ main {
       line-height: 42px;
       text-align: center;
       border-radius: 50%;
-      background-color: var(--first-color-alt);
-      border: 1px solid var(--border-color);
-      color: var(--text-color);
-      font-size: var(--small-font-size);
+      background-color: $first-color-alt;
+      border: 1px solid $border-color;
+      color: $text-color;
+      font-size: $small-font-size;
       position: relative;
     }
     
@@ -582,15 +542,15 @@ main {
       content: '';
       top: -2px;
       border: 0.5rem solid transparent;
-      border-top-color: var(--first-color);
+      border-top-color: $first-color;
     }
     
     .action__btn::after {
       content: attr(aria-label);
       bottom: 100%;
-      background-color: var(--first-color);
-      color: var(--body-color);
-      font-size: var(--tiny-font-size);
+      background-color: $first-color;
+      color: $body-color;
+      font-size: $tiny-font-size;
       white-space: nowrap;
       padding-inline: 0.625rem;
       border-radius: 0.25rem;
@@ -601,11 +561,11 @@ main {
       position: absolute;
       left: 1.25rem;
       top: 1.25rem;
-      background-color: var(--first-color);
-      color: var(--body-color);
+      background-color: $first-color;
+      color: $body-color;
       padding: 0.25rem 0.625rem;
       border-radius: 2.5rem;
-      font-size: var(--tiny-font-size);
+      font-size: $tiny-font-size;
     }
     
     .product__badge.light-pink {
@@ -630,23 +590,23 @@ main {
     }
     
     .product__category {
-      color: var(--text-color-light);
-      font-size: var(--smaller-font-size);
+      color: $text-color-light;
+      font-size: $smaller-font-size;
     }
     
     .product__title {
-      font-size: var(--normal-font-size);
+      font-size: $normal-font-size;
       margin-block: 0.75rem 0.5rem;
     }
     
     .product__rating {
       color: hsl(42, 100%, 50%);
-      font-size: var(--smaller-font-size);
+      font-size: $smaller-font-size;
       margin-bottom: 0.75rem;
     }
     
     .product__price .new__price {
-      font-size: var(--large-font-size);
+      font-size: $large-font-size;
     }
     
     .cart__btn {
@@ -657,8 +617,8 @@ main {
     
     /* Active Tab */
     .tab__btn.active-tab {
-      color: var(--first-color);
-      background-color: var(--second-color);
+      color: $first-color;
+      background-color: $second-color;
     }
     
     .tab__item:not(.active-tab) {
@@ -691,9 +651,9 @@ main {
     }
     
     .action__btn:hover {
-      background-color: var(--first-color);
-      border-color: var(--first-color);
-      color: var(--body-color);
+      background-color: $first-color;
+      border-color: $first-color;
+      color: $body-color;
     }
     
 
