--- a/scss/main.scss
+++ b/scss/main.scss
@@ -449,213 +449,236 @@ main {
     }
 
     // PRODUCTS SECTION
-    .tab__btns {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.75rem;
-      margin-bottom: 2rem;
-    }
+    .products-section {
+      width: 95%;
+
+      .tab__btns {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.75rem;
+        margin-bottom: 2rem;
     
-    .tab__btn {
-      background-color: $container-color;
-      color: $title-color;
-      padding: 1rem 1.25rem 0.875rem;
-      border-radius: 0.25rem;
-      font-family: $font-main;
-      font-size: $small-font-size;
-      font-weight: $weight-600;
-      cursor: pointer;
-    }
+        .tab__btn {
+          background-color: $container-color;
+          color: $title-color;
+          padding: 1rem 1.25rem 0.875rem;
+          border-radius: 0.25rem;
+          font-family: $font-main;
+          font-size: $small-font-size;
+          font-weight: $weight-600;
+          cursor: pointer;
     
-    .products__container {
-      grid-template-columns: repeat(4, 1fr);
-    }
+          &.active-tab {
+            color: $first-color;
+            background-color: $second-color;
+          }
+        }
+      }
     
-    .product__item {
-      border: 1px solid $border-color;
-      border-radius: 1.5rem;
-      transition: all 0.2s $transition;
-    }
+      .tab__items {
+        .tab__item {
+          &:not(.active-tab) {
+            display: none;
+          }
     
-    .product__banner {
-      padding: 0.625rem 0.75rem 0.75rem;
-    }
+          .products__container {
+            grid-template-columns: repeat(4, 1fr);
+            display: grid;
+            gap: 1.5rem;
+          }
+        }
+      }
     
-    .product__banner,
-    .product__images {
-      position: relative;
-    }
+      .product__item {
+        border: 1px solid $border-color;
+        border-radius: 1.5rem;
+        transition: all 0.2s $transition;
     
-    .product__images {
-      display: block;
-      overflow: hidden;
-      border-radius: 1.25rem;
-    }
+        &:hover {
+          box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
+        }
     
-    .product__img {
-      vertical-align: middle;
-      transition: all 1.5s $transition;
-    }
+        .product__banner {
+          padding: 0.625rem 0.75rem 0.75rem;
+          position: relative;
     
-    .product__item:hover .product__img {
-      transform: scale(1.1);
-    }
+          .product__images {
+            display: block;
+            overflow: hidden;
+            border-radius: 1.25rem;
+            position: relative;
     
-    .product__img.hover {
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
+            .product__img {
+              vertical-align: middle;
+              transition: all 1.5s $transition;
     
-    .product__actions {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      display: flex;
-      column-gap: 0.5rem;
-      transition: all 0.2s $transition;
-    }
+              &.hover {
+                position: absolute;
+                top: 0;
+                left: 0;
+                opacity: 0;
+              }
+            }
+          }
     
-    .action__btn {
-      width: 40px;
-      height: 40px;
-      line-height: 42px;
-      text-align: center;
-      border-radius: 50%;
-      background-color: $first-color-alt;
-      border: 1px solid $border-color;
-      color: $text-color;
-      font-size: $small-font-size;
-      position: relative;
-    }
+          &:hover {
+            .product__img.default {
+              opacity: 0;
+            }
+            .product__img.hover {
+              opacity: 1;
+              transform: scale(1.1);
+            }
+            .product__actions {
+              opacity: 1;
+            }
+          }
     
-    .action__btn::before,
-    .action__btn::after {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      transition: all 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24);
-    }
+          .product__actions {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: flex;
+            column-gap: 0.5rem;
+            transition: all 0.2s $transition;
+            opacity: 0;
     
-    .action__btn::before {
-      content: '';
-      top: -2px;
-      border: 0.5rem solid transparent;
-      border-top-color: $first-color;
-    }
+            .action__btn {
+              width: 40px;
+              height: 40px;
+              line-height: 42px;
+              text-align: center;
+              border-radius: 50%;
+              background-color: $first-color-alt;
+              border: 1px solid $border-color;
+              color: $text-color;
+              font-size: $small-font-size;
+              position: relative;
     
-    .action__btn::after {
-      content: attr(aria-label);
-      bottom: 100%;
-      background-color: $first-color;
-      color: $body-color;
-      font-size: $tiny-font-size;
-      white-space: nowrap;
-      padding-inline: 0.625rem;
-      border-radius: 0.25rem;
-      line-height: 2.58;
-    }
+              &::before,
+              &::after {
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+                transition: all 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+                opacity: 0;
+              }
     
-    .product__badge {
-      position: absolute;
-      left: 1.25rem;
-      top: 1.25rem;
-      background-color: $first-color;
-      color: $body-color;
-      padding: 0.25rem 0.625rem;
-      border-radius: 2.5rem;
-      font-size: $tiny-font-size;
-    }
+              &::before {
+                content: '';
+                top: -2px;
+                border: 0.5rem solid transparent;
+                border-top-color: $first-color;
+              }
     
-    .product__badge.light-pink {
-      background-color: hsl(341, 100%, 73%);
-    }
+              &::after {
+                content: attr(aria-label);
+                bottom: 100%;
+                background-color: $first-color;
+                color: $body-color;
+                font-size: $tiny-font-size;
+                white-space: nowrap;
+                padding-inline: 0.625rem;
+                border-radius: 0.25rem;
+                line-height: 2.58;
+              }
     
-    .product__badge.light-green {
-      background-color: hsl(155, 20%, 67%);
-    }
+              &:hover {
+                background-color: $first-color;
+                border-color: $first-color;
+                color: $body-color;
     
-    .product__badge.light-orange {
-      background-color: hsl(24, 100%, 73%);
-    }
+                &::before,
+                &::after {
+                  opacity: 1;
+                  transform: translateX(-50%) translateY(-0.5rem);
+                }
+              }
+            }
+          }
     
-    .product__badge.light-blue {
-      background-color: hsl(202, 53%, 76%);
-    }
+          .product__badge {
+            position: absolute;
+            left: 1.25rem;
+            top: 1.25rem;
+            background-color: $first-color;
+            color: $body-color;
+            padding: 0.25rem 0.625rem;
+            border-radius: 2.5rem;
+            font-size: $tiny-font-size;
     
-    .product__content {
-      padding: 0 1.25rem 1.125rem;
-      position: relative;
-    }
+            &.light-pink {
+              background-color: hsl(341, 100%, 73%);
+            }
     
-    .product__category {
-      color: $text-color-light;
-      font-size: $smaller-font-size;
-    }
+            &.light-green {
+              background-color: hsl(155, 20%, 67%);
+            }
     
-    .product__title {
-      font-size: $normal-font-size;
-      margin-block: 0.75rem 0.5rem;
-    }
+            &.light-orange {
+              background-color: hsl(24, 100%, 73%);
+            }
     
-    .product__rating {
-      color: hsl(42, 100%, 50%);
-      font-size: $smaller-font-size;
-      margin-bottom: 0.75rem;
-    }
+            &.light-blue {
+              background-color: hsl(202, 53%, 76%);
+            }
+          }
+        }
     
-    .product__price .new__price {
-      font-size: $large-font-size;
-    }
+        .product__content {
+          padding: 0 1.25rem 1.125rem;
+          position: relative;
     
-    .cart__btn {
-      position: absolute;
-      bottom: 1.6rem;
-      right: 1.25rem;
-    }
+          .product__category {
+            color: $text-color-light;
+            font-size: $smaller-font-size;
+          }
     
-    /* Active Tab */
-    .tab__btn.active-tab {
-      color: $first-color;
-      background-color: $second-color;
-    }
+          .product__title {
+            font-size: $normal-font-size;
+            margin-block: 0.75rem 0.5rem;
+          }
     
-    .tab__item:not(.active-tab) {
-      display: none;
-    }
+          .product__rating {
+            color: hsl(42, 100%, 50%);
+            font-size: $smaller-font-size;
+            margin-bottom: 0.75rem;
+          }
     
-    /* Product Hover */
-    .product__img.hover,
-    .product__actions,
-    .action__btn::before,
-    .action__btn::after,
-    .product__item:hover .product__img.default {
-      opacity: 0;
-    }
+          .product__price {
+            display: flex;
+            gap: 0.5rem;
     
-    .product__item:hover {
-      box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
-    }
+            .new__price {
+              font-size: $large-font-size;
+            }
+          }
     
-    .product__item:hover .product__img.hover,
-    .product__item:hover .product__actions,
-    .action__btn:hover::before,
-    .action__btn:hover::after {
-      opacity: 1;
-    }
+          .cart__btn {
+            position: absolute;
+            bottom: 1.6rem;
+            right: 1.25rem;
+            width: 40px;
+            height: 40px;
+            line-height: 42px;
+            text-align: center;
+            border-radius: 50%;
+            background-color: $first-color-alt;
+            border: 1px solid $border-color;
+            color: $text-color;
+            font-size: $small-font-size;
+            transition: all 0.3s ease;
     
-    .action__btn:hover::before,
-    .action__btn:hover::after {
-      transform: translateX(-50%) translateY(-0.5rem);
+            &:hover {
+              background-color: $first-color;
+              border-color: $first-color;
+              color: $body-color;
+            }
+          }
+        }
+      }
     }
-    
-    .action__btn:hover {
-      background-color: $first-color;
-      border-color: $first-color;
-      color: $body-color;
-    }
-    
 
     //REVIEWS SECTION
     .reviews-section {
